load test and server monitor jpackage added